fix: letter spacing title

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ html {
   margin: 0 auto;
   color: #000;
   font-size: 116px;
-  letter-spacing: 4.06px;
+  letter-spacing: 3.5px;
   font-family: 'Raleway';
   font-weight: bold;
   text-align: center;
